# trieste-while

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  program_generation  program_generation.py  stats  stats.sh
examples/: bexpr-constant-prop.while  factorial.while  function.while  live.while  nested_while.while  power.while  presentation-program.while  simple-arith.while  skip.while  test.while  testing.while  vars.while  z_analysis_complexer.while  z_analysis_if_stmt.while  z_analysis_while.while
src/: constant_analysis.cc  control_flow.cc  control_flow.hh  data-flow-analysis.cc  data-flow-analysis.hh  data_flow_analysis.cc  data_flow_analysis.hh  dataflow_analysis.hh  final_rewriter.cc  internal.hh  interpreter.cc  lang.hh  live-analysis.cc  main.cc  optimization_analysis.cc  parser.cc  reader.cc  set_lattice.hh  statistics_rewriter.cc  utils.cc  utils.hh  while.cc  while_trieste.cc
src/analyses/: constant_propagation.hh  dataflow_analysis.hh  liveness.hh  zero.hh
src/passes/: check_refs.cc  constant_folding.cc  constant_propagation.cc  control_flow.cc  dead_code_elimination.cc  eval.cc  expressions.cc  functions.cc  gather_control_flow.cc  gather_instructions.cc  gather_stats.cc  generate_mermaid.cc  mermaid.cc  normalization.cc  simplify.cc  statements.cc  unique_variables.cc  zero_analysis.cc
